# UPS-monitoring

./: CMakeLists.txt  Config.json  HandledData.cpp  HandledData.h  README.md  clear_ws.sh  install.sh  main.cpp  sqlite_notes.txt  ups.service  ups_service.cpp  ups_service.h  utils.cpp  utils.h
DataBase/: CMakeLists.txt  DBManager.cpp  DBManager.h  Makefile  cmake_install.cmake
ModBus/: CMakeLists.txt  ModbusManager.cpp  ModbusManager.h  ModbusObject.cpp  ModbusObject.h  SmartHandler.cpp  SmartHandler.h  TdsComPort.cpp  TdsComPort.h  crc.cpp  crc.h
arm_build/: ups_service
libmicrohttpd/: CMakeLists.txt
rest_server/: CMakeLists.txt
sqlite3_tool/: build_sqlite_tool.sh
